[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/engine/level_restart.gd" type="Script" id=1]
[ext_resource path="res://resources/icon.png" type="Texture" id=2]
[ext_resource path="res://scripts/player/KinematicBody2D.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31.7337, 32.0691 )

[node name="scene_level" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="level" type="Container" parent="." index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="StaticBody2D1" type="StaticBody2D" parent="level" index="0"]

position = Vector2( 896, 900 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="sprite" type="Sprite" parent="level/StaticBody2D1" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="collisionShape" type="CollisionShape2D" parent="level/StaticBody2D1" index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="StaticBody2D2" type="StaticBody2D" parent="level" index="1"]

position = Vector2( 960, 900 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="sprite" type="Sprite" parent="level/StaticBody2D2" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="collisionShape" type="CollisionShape2D" parent="level/StaticBody2D2" index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="StaticBody2D3" type="StaticBody2D" parent="level" index="2"]

position = Vector2( 1024, 900 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="sprite" type="Sprite" parent="level/StaticBody2D3" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="collisionShape" type="CollisionShape2D" parent="level/StaticBody2D3" index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="player" type="KinematicBody2D" parent="." index="1"]

position = Vector2( 960, 540 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]
SPEED = 20
GRAVITY = 600
AIR_ACCELERATION = 0.2
MAX_SPEED = 1000
SLOW_DOWN_SPEED = 100
JUMP_HEIGHT = 500

[node name="player_sprite" type="Sprite" parent="player" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="player_rect" type="CollisionShape2D" parent="player" index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="player_down_left" type="RayCast2D" parent="player" index="2"]

position = Vector2( -30, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 33 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="player_down_right" type="RayCast2D" parent="player" index="3"]

position = Vector2( 30, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 33 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="player_right_up" type="RayCast2D" parent="player" index="4"]

position = Vector2( 0, -32 )
enabled = true
exclude_parent = true
cast_to = Vector2( 33, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="player_right_down" type="RayCast2D" parent="player" index="5"]

position = Vector2( 0, 32 )
enabled = true
exclude_parent = true
cast_to = Vector2( 33, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="player_left_up" type="RayCast2D" parent="player" index="6"]

position = Vector2( 0, -32 )
enabled = true
exclude_parent = true
cast_to = Vector2( -33, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="player_left_down" type="RayCast2D" parent="player" index="7"]

position = Vector2( 0, 32 )
enabled = true
exclude_parent = true
cast_to = Vector2( -33, 0 )
collision_mask = 1


